--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.4",
+        "barryvdh/laravel-dompdf": "^3.1",
         "dompdf/dompdf": "^3.1",
         "guzzlehttp/guzzle": "^7.9",
         "intervention/image": "^3.11",
